# ccql

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/dedup/: mod.rs
src/models/: history.rs
src/query/: mod.rs
src/search/: mod.rs
