[package]
name = "ccql"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying Claude Code data"
authors = ["Doug Lance"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Query engine - custom jq-like implementation

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Output formatting
comfy-table = "7.1"
colored = "2.1"

# Path expansion
shellexpand = "3.1"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Search
regex = "1.10"

# Fuzzy matching
strsim = "0.11"

# SQL query engine with JSON/JSONL storage
gluesql = "0.16"
gluesql-json-storage = "0.16"

# File operations
walkdir = "2.4"
glob = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "ccql"
path = "src/main.rs"
